--- a/ScenekitStarter/EdgeFuzzParameterView.xib
+++ b/ScenekitStarter/EdgeFuzzParameterView.xib
@@ -123,7 +123,7 @@
                 </textField>
                 <slider horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TYV-p8-0ps">
                     <rect key="frame" x="273" y="211" width="18" height="20"/>
-                    <sliderCell key="cell" controlSize="small" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="left" allowsTickMarkValuesOnly="YES" sliderType="circular" id="m76-c3-1SN"/>
+                    <sliderCell key="cell" controlSize="small" continuous="YES" alignment="left" maxValue="1" doubleValue="0.5" tickMarkPosition="left" allowsTickMarkValuesOnly="YES" sliderType="circular" id="m76-c3-1SN"/>
                     <connections>
                         <action selector="updateFuzziness:" target="-2" id="Ioy-dL-nof"/>
                     </connections>
@@ -141,14 +141,14 @@
                 </textField>
                 <slider horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pgw-Ez-RSd">
                     <rect key="frame" x="273" y="154" width="18" height="20"/>
-                    <sliderCell key="cell" controlSize="small" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="left" allowsTickMarkValuesOnly="YES" sliderType="circular" id="OPu-Wo-HHA"/>
+                    <sliderCell key="cell" controlSize="small" continuous="YES" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="left" allowsTickMarkValuesOnly="YES" sliderType="circular" id="OPu-Wo-HHA"/>
                     <connections>
                         <action selector="updateEdgeFade:" target="-2" id="sc5-Uf-qg6"/>
                     </connections>
                 </slider>
                 <slider horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PuY-jE-e99">
                     <rect key="frame" x="273" y="122" width="18" height="20"/>
-                    <sliderCell key="cell" controlSize="small" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="left" allowsTickMarkValuesOnly="YES" sliderType="circular" id="9Ev-Ti-aVF"/>
+                    <sliderCell key="cell" controlSize="small" continuous="YES" alignment="left" maxValue="100" doubleValue="50" tickMarkPosition="left" allowsTickMarkValuesOnly="YES" sliderType="circular" id="9Ev-Ti-aVF"/>
                     <connections>
                         <action selector="updateSpecularity:" target="-2" id="DHN-nY-Ne5"/>
                     </connections>
