--- a/ScenekitStarter/LightingModelWindow.xib
+++ b/ScenekitStarter/LightingModelWindow.xib
@@ -62,7 +62,8 @@
                                         <menuItem title="Blinn" id="iCM-jc-oNK"/>
                                         <menuItem title="Edge Fuzz" id="uez-MC-ZVr"/>
                                         <menuItem title="Gooch" id="qPy-6U-M8Z"/>
-                                        <menuItem title="Hemishphere" id="33t-1X-xrB" userLabel="Hemishphere"/>
+                                        <menuItem title="Hemisphere" id="33t-1X-xrB" userLabel="Hemishphere"/>
+                                        <menuItem title="Lamb Skin" id="1xW-tJ-aNb" userLabel="Lamb Skin"/>
                                         <menuItem title="Velvet" id="gsc-xb-G84" userLabel="Velvet"/>
                                     </items>
                                 </menu>
